# aerotest

./: .gitignore  LICENSE  README-虚拟环境使用指南.md  README.md  alembic.ini  fix_encoding.py  pyproject.toml  requirements.txt  temp_anchor.txt  temp_batch_browser_cdp_session.py  temp_batch_core_ooda_ooda_engine.py  temp_batch_core_ooda_types.py  temp_browser_browser_cdp_connection.py  temp_browser_browser_cdp_types.py  temp_browser_browser_dom_cdp_types.py  temp_browser_browser_dom_event_listener_detector.py  temp_browser_browser_dom_paint_order.py  temp_browser_browser_dom_serializer.py  temp_case_executor.txt  temp_clickable.txt  temp_context.txt  temp_core_funnel_engine.py  temp_core_funnel_l2_attribute_matcher.py  temp_core_funnel_l2_l2_engine.py  temp_core_funnel_l2_scorer.py  temp_core_funnel_l3_l3_engine.py  temp_core_funnel_l4_l4_engine.py  temp_core_funnel_l5_screenshot_service.py  temp_dom_service.txt  temp_entity.txt  temp_fix_core_funnel_l2_type_matcher.py  temp_l3types.txt  temp_ooda_engine.txt  temp_ooda_full.txt  temp_proximity.txt  temp_qwen2vl.txt  temp_slot.txt  temp_synonym.txt  temp_types.txt  temp_views.txt  (+4 more)
aerotest/: __init__.py  cli.py
aerotest/ai/: __init__.py
aerotest/api/: __init__.py  main.py
aerotest/config/: __init__.py  settings.py
aerotest/core/: __init__.py  client.py  types.py
docs/: AeroTest-AI-最终完成报告.md  AeroTest-技术架构设计.md  CDP-vs-Playwright-技术选型分析.md  Day1-2完成总结.md  Day3-5-OODA完成总结.md  MVP实施计划-Week1.md  Phase2-Day1-2完成总结.md  Phase2-L1-L2层实施计划.md  Phase2-Week1完成总结.md  Phase2-Week2计划.md  Phase2-完成总结.md  Phase3-L3-L5层实施计划.md  Phase3-Week1完成总结.md  Phase3-完成总结.md  Phase3-进度报告.md  Week1-DOM提取进度.md  Week1-完成总结.md  Week2-完成总结.md  Week3-Session管理计划.md  Week3-完善完成.md  Week3-完成总结.md  browser-use-CDP代码复用分析.md  browser-use-feasibility-analysis.md  browser-use-quick-start.md  browser-use-实际代码评估报告.md  requirement.md  实现完整性检查报告.md  工程架构说明.md  当前状态与下一步计划.md  快速开始-Week3.md  快速开始指南.md  清理临时文件总结.txt  清理临时文件报告.md  集成测试方案.md  需求实现进度报告-2025-12-18.md  项目状态报告.md  项目状态更新-2025-12-18.md  项目状态更新-Week2完成.md  项目状态更新-Week3-100%完成.md  项目状态更新-Week3完成.md  (+2 more)
examples/: cdp_session_usage.py  dom_service_usage.py  l1_engine_usage.py  ooda_usage.py
scripts/: batch_fix_remaining.py  generate_migration.sh  init_project.py
tests/: conftest.py
(+95 files in other folders)
